# screen-doodle

./: .gitignore  =6.6  CLAUDE.md  LICENSE  README.md  build.py  main.py  pyproject.toml  requirements.txt  run.bat  setting.json  stroke_profile.json
.github/workflows/: build.yml
docs/: stroke_config_guide.md
screen_doodle/: app.py  canvas.py  capture_service.py  models.py  overlay.py  renderer.py  rendering_config.py  stroke_manager.py  toolbar.py
