[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "screen-doodle"
version = "0.1.0"
description = "Lightweight Windows screen annotation tool"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6.0",
    "Pillow>=10.0.0",
    "keyboard>=0.13.5",
]
